fix border radius on safari

--- a/src/components/SearchArea.module.css
+++ b/src/components/SearchArea.module.css
@@ -60,6 +60,7 @@
   background: rgb(255, 255, 255);
   border-width: 0;
   border-radius: 3px;
+  -webkit-border-radius: 3px;
   padding-top: 0px;
   color: hsl(0, 0%, 20%);
   display: flex;
